# e2e-taxi-ride-duration-prediction

./: .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml
e2e_taxi_ride_duration_prediction/: ingestion.py  mlflow_utils.py  models.py  monitoring.py  preprocessing.py  training.py
e2e_taxi_ride_duration_prediction/serving/: dockerfile  main.py
models/: baseline_taxi_duration_model_and_vectorizer.joblib
notebooks/: 00_demo.ipynb  01_baseline.ipynb  02_Monitoring.ipynb  02_monitoring.ipynb  99_scratch.ipynb
scripts/: prefect_deployment.py  train_model.py
terraform/: main.tf
tests/: conftest.py  ingestion_test.py  mlflow_utils_test.py  monitoring_test.py  preprocessing_test.py  serving_test.py  training_test.py
