[project]
name = "e2e-taxi-ride-duration-prediction"
version = "0.1.0"
description = "An end-to-end MLOps project showcasing a complete machine learning pipeline using the NYC Taxi dataset. The goal is to predict taxi ride durations based on trip data and demonstrate modern MLOps practices, from data ingestion to model deployment and monitoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "nbmake>=1.5.5",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
